div/copyparty/resources/copyparty-namespace.yaml
***REMOVED*** Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: copyparty
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    name: copyparty
